--- a/_test/languages/dxwebsrv.pot
+++ b/_test/languages/dxwebsrv.pot
@@ -155,7 +155,7 @@ msgstr ""
 
 #: strconsts.rsabouttext
 #, object-pascal-format
-msgid "DataExpress Web Server<br>is working...<br><br>Version: %s<br><br>Copyright &#169; 2016-2024 Pavel Duborkin<br><br><a href=\"https://mydataexpress.ru\">Project Website</a> | <a href=\"https://forum.mydataexpress.ru\">Forum</a> | <a href=\"https://wiki.mydataexpress.ru\">Wiki</a>"
+msgid "DataExpress Web Server<br>is working...<br><br>Version: %s<br><br>Copyright &#169; 2016-2025 Pavel Duborkin<br><br><a href=\"https://mydataexpress.ru\">Project Website</a> | <a href=\"https://forum.mydataexpress.ru\">Forum</a> | <a href=\"https://wiki.mydataexpress.ru\">Wiki</a>"
 msgstr ""
 
 #: strconsts.rsabouttextconsole
@@ -163,7 +163,7 @@ msgstr ""
 msgid ""
 "DataExpress Web Server is working...\n"
 "Version: %s\n"
-"Copyright (c) 2016-2024 Pavel Duborkin"
+"Copyright (c) 2016-2025 Pavel Duborkin"
 msgstr ""
 
 #: strconsts.rsaccessdenied
@@ -554,6 +554,11 @@ msgstr ""
 #: strconsts.rsinvalidconnectionname
 #, object-pascal-format
 msgid "%s - invalid connection name. The name can only include the following characters: a-z, 0-9, _"
+msgstr ""
+
+#: strconsts.rsinvaliddate
+#, object-pascal-format
+msgid "Invalid date %s"
 msgstr ""
 
 #: strconsts.rsinvalidfreshvalue
